--- a/Museek/InterfaceBuilder/Base.lproj/SignUp.storyboard
+++ b/Museek/InterfaceBuilder/Base.lproj/SignUp.storyboard
@@ -19,16 +19,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cY4-h6-x4y" userLabel="password">
-                                <rect key="frame" x="41.333333333333343" y="361.33333333333331" width="331.33333333333326" height="33.333333333333314"/>
+                                <rect key="frame" x="41.333333333333343" y="361.33333333333331" width="330" height="33.333333333333314"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="cY4-h6-x4y" secondAttribute="height" multiplier="10:1" id="TQx-Sr-rlJ"/>
+                                    <constraint firstAttribute="width" secondItem="cY4-h6-x4y" secondAttribute="height" multiplier="10:1" constant="-3.3333333333332575" id="TQx-Sr-rlJ"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXA-Ib-wBd" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
-                                <rect key="frame" x="41.333333333333343" y="424.66666666666669" width="331.33333333333326" height="33"/>
+                                <rect key="frame" x="41.333333333333343" y="424.66666666666669" width="330" height="33"/>
                                 <color key="backgroundColor" red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="zXA-Ib-wBd" secondAttribute="height" multiplier="10:1" id="iCh-7C-kzw"/>
@@ -47,10 +47,11 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="signIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="acR-GA-bOc"/>
+                                    <segue destination="zpY-7i-ai1" kind="show" id="Ba1-Zt-CI6"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="06m-Jv-M4p" userLabel="name">
-                                <rect key="frame" x="41.333333333333343" y="298.33333333333331" width="331.33333333333326" height="33"/>
+                                <rect key="frame" x="41.333333333333343" y="298.33333333333331" width="330" height="33"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="06m-Jv-M4p" secondAttribute="height" multiplier="10:1" id="QX1-Rc-0TW"/>
@@ -90,12 +91,12 @@
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zXA-Ib-wBd" firstAttribute="top" secondItem="cY4-h6-x4y" secondAttribute="bottom" constant="30" id="1g9-K7-PB9"/>
-                            <constraint firstItem="06m-Jv-M4p" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" id="35F-7o-reT"/>
+                            <constraint firstItem="06m-Jv-M4p" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" constant="-1.0344827586206975" id="35F-7o-reT"/>
                             <constraint firstItem="LZ6-Zy-5eB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="4X4-WZ-5JH"/>
-                            <constraint firstItem="cY4-h6-x4y" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" id="AHJ-Dw-q5g"/>
+                            <constraint firstItem="cY4-h6-x4y" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" constant="-1.0344827586206975" id="AHJ-Dw-q5g"/>
                             <constraint firstItem="zXA-Ib-wBd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="B7Y-fc-Yy7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LZ6-Zy-5eB" secondAttribute="bottom" id="N2g-oO-b7Q"/>
-                            <constraint firstItem="zXA-Ib-wBd" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" id="X8c-Pz-oF7"/>
+                            <constraint firstItem="zXA-Ib-wBd" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" constant="-1.0344827586206975" id="X8c-Pz-oF7"/>
                             <constraint firstItem="06m-Jv-M4p" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Xqc-aL-8an"/>
                             <constraint firstItem="LZ6-Zy-5eB" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="207:358" id="cRj-KR-PCn"/>
                             <constraint firstItem="LZ6-Zy-5eB" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="fWY-zd-JJG"/>
@@ -114,10 +115,18 @@
             </objects>
             <point key="canvasLocation" x="575" y="29"/>
         </scene>
+        <!--mainTabID-->
+        <scene sceneID="O0g-Cq-oVg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="mainTabID" id="zpY-7i-ai1" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QrF-kV-Krb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="25" y="614"/>
+        </scene>
         <!--Sign Up VC-->
         <scene sceneID="7MD-Tb-GgY">
             <objects>
-                <viewController id="l5h-Rp-eiN" userLabel="Sign Up VC" customClass="SignUpVC" customModule="Museek" sceneMemberID="viewController">
+                <viewController id="l5h-Rp-eiN" userLabel="Sign Up VC" customClass="SignUpVC" customModule="Museek" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zea-Cb-EcA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -285,6 +294,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="SKQ-5Q-RzU"/>
-        <segue reference="5RR-sF-cek"/>
+        <segue reference="CWb-rm-VCe"/>
     </inferredMetricsTieBreakers>
 </document>
