--- a/Museek/InterfaceBuilder/EmailSignUp.xib
+++ b/Museek/InterfaceBuilder/EmailSignUp.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qaG-E7-Eir">
-                    <rect key="frame" x="37" y="208.5" width="300" height="30"/>
+                    <rect key="frame" x="22.5" y="201" width="330" height="33"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="tintColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -35,7 +35,7 @@
                     <textInputTraits key="textInputTraits" textContentType="email"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3L-ko-M4a" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
-                    <rect key="frame" x="37" y="388.5" width="300" height="30"/>
+                    <rect key="frame" x="22.5" y="390" width="330" height="33"/>
                     <color key="backgroundColor" red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="G3L-ko-M4a" secondAttribute="height" multiplier="10:1" id="mRm-3L-fW3"/>
@@ -51,7 +51,7 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iS8-fx-8AU">
-                    <rect key="frame" x="37" y="268.5" width="300" height="30"/>
+                    <rect key="frame" x="22.5" y="264" width="330" height="33"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="tintColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -62,11 +62,11 @@
                     <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                 </textField>
                 <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dSU-1e-v55">
-                    <rect key="frame" x="37" y="328.5" width="300" height="30"/>
+                    <rect key="frame" x="22.5" y="328.5" width="330" height="30"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="tintColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="dSU-1e-v55" secondAttribute="height" multiplier="10:1" id="a5n-Ud-P6P"/>
+                        <constraint firstAttribute="width" secondItem="dSU-1e-v55" secondAttribute="height" multiplier="10:1" constant="30" id="a5n-Ud-P6P"/>
                     </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -75,18 +75,18 @@
             </subviews>
             <color key="backgroundColor" red="0.40792796019999999" green="0.40791851280000002" blue="0.4079203904" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
-                <constraint firstItem="iS8-fx-8AU" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="300:667" id="7F7-BN-ExB"/>
-                <constraint firstItem="dSU-1e-v55" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="300:667" id="7Ps-fe-4Ux"/>
-                <constraint firstItem="qaG-E7-Eir" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="300:667" id="Cy9-cW-0uA"/>
+                <constraint firstItem="qaG-E7-Eir" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="6Bc-Xo-Q8n"/>
+                <constraint firstItem="iS8-fx-8AU" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="330:667" id="7F7-BN-ExB"/>
+                <constraint firstItem="dSU-1e-v55" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="330:667" id="7Ps-fe-4Ux"/>
+                <constraint firstItem="qaG-E7-Eir" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="330:667" id="Cy9-cW-0uA"/>
+                <constraint firstItem="dSU-1e-v55" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Had-lT-o43"/>
                 <constraint firstItem="dSU-1e-v55" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="Kbr-qy-Rwf"/>
-                <constraint firstItem="dSU-1e-v55" firstAttribute="top" secondItem="iS8-fx-8AU" secondAttribute="bottom" constant="30" id="R0W-D5-qHd"/>
+                <constraint firstItem="dSU-1e-v55" firstAttribute="top" secondItem="iS8-fx-8AU" secondAttribute="bottom" constant="31.5" id="R0W-D5-qHd"/>
                 <constraint firstItem="iS8-fx-8AU" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="TIk-vS-afv"/>
-                <constraint firstItem="dSU-1e-v55" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="U0w-hj-uBM"/>
                 <constraint firstItem="iS8-fx-8AU" firstAttribute="top" secondItem="qaG-E7-Eir" secondAttribute="bottom" constant="30" id="db4-6U-G1t"/>
-                <constraint firstItem="G3L-ko-M4a" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="300:667" id="ilS-3U-tBG"/>
-                <constraint firstItem="qaG-E7-Eir" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="mZf-el-4HQ"/>
+                <constraint firstItem="G3L-ko-M4a" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="330:667" id="ilS-3U-tBG"/>
                 <constraint firstItem="G3L-ko-M4a" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="p9Q-hI-n7a"/>
-                <constraint firstItem="G3L-ko-M4a" firstAttribute="top" secondItem="dSU-1e-v55" secondAttribute="bottom" constant="30" id="qv9-tA-p2d"/>
+                <constraint firstItem="G3L-ko-M4a" firstAttribute="top" secondItem="dSU-1e-v55" secondAttribute="bottom" constant="31.5" id="qv9-tA-p2d"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
