--- a/Museek/InterfaceBuilder/Base.lproj/SignUp.storyboard
+++ b/Museek/InterfaceBuilder/Base.lproj/SignUp.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,7 +30,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXA-Ib-wBd" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
                                 <rect key="frame" x="41.333333333333343" y="424.66666666666669" width="330" height="33"/>
-                                <color key="backgroundColor" red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" name="AppAccent"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="zXA-Ib-wBd" secondAttribute="height" multiplier="10:1" id="iCh-7C-kzw"/>
                                 </constraints>
@@ -88,7 +89,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" name="AppMain"/>
                         <constraints>
                             <constraint firstItem="zXA-Ib-wBd" firstAttribute="top" secondItem="cY4-h6-x4y" secondAttribute="bottom" constant="30" id="1g9-K7-PB9"/>
                             <constraint firstItem="06m-Jv-M4p" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="300:667" constant="-1.0344827586206975" id="35F-7o-reT"/>
@@ -204,7 +205,7 @@
                         <subviews>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yIG-9h-1cm" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
                                 <rect key="frame" x="42" y="330.66666666666669" width="330" height="35"/>
-                                <color key="backgroundColor" red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" name="AppAccent"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="yIG-9h-1cm" secondAttribute="height" multiplier="66:7" id="W45-RH-JCf"/>
                                 </constraints>
@@ -275,7 +276,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" name="AppMain"/>
                         <constraints>
                             <constraint firstItem="yIG-9h-1cm" firstAttribute="centerY" secondItem="1Qo-hi-LXd" secondAttribute="centerY" constant="-30" id="9Vf-ge-Km0"/>
                             <constraint firstItem="7Z3-VE-EJv" firstAttribute="centerY" secondItem="1Qo-hi-LXd" secondAttribute="centerY" constant="30" id="GfL-0h-osr"/>
@@ -292,8 +293,16 @@
             <point key="canvasLocation" x="-67" y="-1088"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="AppAccent">
+            <color red="0.92900002002716064" green="0.40400001406669617" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="AppMain">
+            <color red="0.40799999237060547" green="0.40799999237060547" blue="0.40799999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="SKQ-5Q-RzU"/>
-        <segue reference="CWb-rm-VCe"/>
+        <segue reference="bEC-Oc-mYa"/>
+        <segue reference="5RR-sF-cek"/>
     </inferredMetricsTieBreakers>
 </document>
