--- a/Museek/InterfaceBuilder/Discover.storyboard
+++ b/Museek/InterfaceBuilder/Discover.storyboard
@@ -14,7 +14,7 @@
             <objects>
                 <viewController id="rnV-4P-MSy" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vIw-Ea-peZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="zk2-dc-pog"/>
@@ -29,14 +29,14 @@
         <scene sceneID="4EY-XI-GJy">
             <objects>
                 <navigationController storyboardIdentifier="NavDiscover" title="Discover" automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="bH8-QC-NHX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="explore" selectedImage="explore (filled)" id="EmO-XK-HUQ">
+                    <tabBarItem key="tabBarItem" title="" image="explore" selectedImage="explore (filled)" id="VRJ-ZS-Skz">
                         <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="p3u-ZD-u1R">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="p3u-ZD-u1R">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
