--- a/Museek/InterfaceBuilder/EmailSignUp.xib
+++ b/Museek/InterfaceBuilder/EmailSignUp.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,7 +37,7 @@
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3L-ko-M4a" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
                     <rect key="frame" x="22.5" y="390" width="330" height="33"/>
-                    <color key="backgroundColor" red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" name="AppAccent"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="G3L-ko-M4a" secondAttribute="height" multiplier="10:1" id="mRm-3L-fW3"/>
                     </constraints>
@@ -73,7 +74,7 @@
                     <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                 </textField>
             </subviews>
-            <color key="backgroundColor" red="0.40792796019999999" green="0.40791851280000002" blue="0.4079203904" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" name="AppMain"/>
             <constraints>
                 <constraint firstItem="qaG-E7-Eir" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="6Bc-Xo-Q8n"/>
                 <constraint firstItem="iS8-fx-8AU" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="330:667" id="7F7-BN-ExB"/>
@@ -91,4 +92,12 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="AppAccent">
+            <color red="0.92900002002716064" green="0.40400001406669617" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="AppMain">
+            <color red="0.40799999237060547" green="0.40799999237060547" blue="0.40799999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
