--- a/Museek/InterfaceBuilder/Feed.storyboard
+++ b/Museek/InterfaceBuilder/Feed.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +15,7 @@
             <objects>
                 <viewController id="5JD-HL-gwa" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h2q-yf-gdA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="BJe-Gb-8to"/>
@@ -29,16 +30,16 @@
         <scene sceneID="of1-Q4-CBH">
             <objects>
                 <navigationController storyboardIdentifier="NavFeed" title="Feed" automaticallyAdjustsScrollViewInsets="NO" id="vbs-Ig-Ue9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="stage" selectedImage="stage (filled)" id="Co5-fg-7lV">
+                    <tabBarItem key="tabBarItem" title="" image="stage" selectedImage="stage (filled)" id="wJq-0A-f6b">
                         <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="KNv-zS-CjR">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="KNv-zS-CjR">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="0.92941176469999998" green="0.4039215686" blue="0.52549019610000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <color key="textColor" name="AppAccent"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -57,5 +58,8 @@
     <resources>
         <image name="stage" width="25" height="25"/>
         <image name="stage (filled)" width="25" height="25"/>
+        <namedColor name="AppAccent">
+            <color red="0.92900002002716064" green="0.40400001406669617" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
