--- a/Museek/InterfaceBuilder/NameSignUp.xib
+++ b/Museek/InterfaceBuilder/NameSignUp.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,7 +24,7 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ktv-Ot-rcJ" customClass="RoundedButton" customModule="Museek" customModuleProvider="target">
                     <rect key="frame" x="20" y="380" width="335" height="33"/>
-                    <color key="backgroundColor" red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" name="AppAccent"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Ktv-Ot-rcJ" secondAttribute="height" multiplier="10:1" constant="5" id="agT-4g-jGH"/>
                     </constraints>
@@ -49,7 +50,7 @@
                     <textInputTraits key="textInputTraits" textContentType="nickname"/>
                 </textField>
             </subviews>
-            <color key="backgroundColor" red="0.40792796015739441" green="0.40791851282119751" blue="0.40792039036750793" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" name="AppMain"/>
             <constraints>
                 <constraint firstItem="Ktv-Ot-rcJ" firstAttribute="top" secondItem="0WZ-Gn-FaK" secondAttribute="bottom" constant="30" id="GG2-Rw-JHh"/>
                 <constraint firstItem="Ktv-Ot-rcJ" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="330:667" constant="5" id="ISA-pR-8jt"/>
@@ -61,4 +62,12 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="AppAccent">
+            <color red="0.92900002002716064" green="0.40400001406669617" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="AppMain">
+            <color red="0.40799999237060547" green="0.40799999237060547" blue="0.40799999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
