--- a/Museek/InterfaceBuilder/Notifications.storyboard
+++ b/Museek/InterfaceBuilder/Notifications.storyboard
@@ -14,7 +14,7 @@
             <objects>
                 <viewController id="dqD-Ao-35i" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7TK-aZ-noA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="H2C-7G-J5r"/>
@@ -29,14 +29,14 @@
         <scene sceneID="DL2-c3-hE0">
             <objects>
                 <navigationController storyboardIdentifier="NavNotifications" title="Notifications" automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="7a8-jm-kYn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="support" selectedImage="support (filled)" id="n33-P0-eN1">
+                    <tabBarItem key="tabBarItem" title="" image="support" selectedImage="support (filled)" id="i9R-oW-wor">
                         <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="s06-MA-QBx">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="s06-MA-QBx">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
