--- a/Museek/InterfaceBuilder/Profile.storyboard
+++ b/Museek/InterfaceBuilder/Profile.storyboard
@@ -14,7 +14,7 @@
             <objects>
                 <viewController id="GLW-eZ-scU" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zzl-qQ-Unh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="X2S-hD-EDI"/>
@@ -29,14 +29,14 @@
         <scene sceneID="xXd-R3-9C7">
             <objects>
                 <navigationController storyboardIdentifier="NavProfile" title="Profile" automaticallyAdjustsScrollViewInsets="NO" id="GwC-iz-YgK" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="profile" selectedImage="profile (filled)" id="wda-da-N7C">
+                    <tabBarItem key="tabBarItem" title="" image="profile" selectedImage="profile (filled)" id="TOo-W8-Ht3">
                         <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="pxr-KF-3nU">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="pxr-KF-3nU">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
